# Nebula-Protocol

./: .dockerignore  .gitignore  ADAPTIVE_INDEXING_PROTOCOL_INTEGRATION.md  CONSTELLATION_3_ADVANCED_FEATURES.md  CONTEXT_ENGINEERING_PROTOCOL.md  CONTRIBUTING.md  DIOXUS_NEBULA_ADAPTATION.md  DIOXUS_README.md  DOCKER_DEPLOYMENT.md  DOCKER_README.md  DYNAMIC_DOCUMENTATION.md  Dockerfile  ERROR_LOGGING_REQUIREMENTS.md  EXECUTIVE_REVIEW.md  FLUTTER_NEBULA_ADAPTATION.md  FLUTTER_README.md  GIT_CLIENT_AGNOSTIC.md  GIT_STORAGE.md  IMPLEMENTATION_GUIDE.md  LANGUAGE_BRIDGE_SYSTEM.md  LANGUAGE_SUPPORT.md  LICENSE  MCP_SETUP_GUIDE.md  MCP_implementation.md  NOVEMBER_UPDATES.md  Nebula_Protocol.md  Nebula_readme.md  OCTOBER_UPDATES.md  OCTOBER_UPDATES_COMPLETED.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_STATUS.md  PYTHON_NEBULA_ADAPTATION.md  PYTHON_README.md  REACT_NEBULA_ADAPTATION.md  README.md  RUST_NEBULA_ADAPTATION.md  RUST_README.md  STAR_GATE_3_ADVANCED_FEATURES.md  STAR_GATE_INFRA_1.md  (+38 more)
.data/: nebula_kg.sqlite
.nebula/: .gitignore  config.example.json
Nebula-KG/: CONNECTION_GUIDE.md
db/: init.sql
db/migrations/: 001_add_timezone_to_timestamps.sql
local_kg/: README.md  local_kg.py  local_kg.py.bak  nebula_protocol_local.db  schema.sql  seed_data.sql  setup.py  sync.py
local_kg/bridges/: README.md  bridge_csharp.cs  bridge_dart.dart  bridge_go.go  (+9 more)
monitoring/: prometheus.yml
nebula-mcp-server/: Dockerfile  README.md  package-lock.json  package.json
nginx/: nginx.conf
projects/: CENTRAL_KG_STATUS.md  FINAL_STATUS.md  PROGRESS_SUMMARY.md  PYTHON_TEST_PROJECTS.md  rapid-init-remaining.ps1
projects/project-1/: .coverage  CONSTELLATION_0_SETUP.md  CONSTELLATION_1_CORE.md  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  STAR_GATE_0_SETUP.md  STAR_GATE_1_CORE.md  STAR_SYSTEM_0.1_ENVIRONMENT.md  STAR_SYSTEM_0.2_STRUCTURE.md  STAR_SYSTEM_1.1_TODO_LOGIC.md  STAR_SYSTEM_1.2_STORAGE.md  STAR_SYSTEM_1.3_CLI_COMMANDS.md  pyproject.toml  pytest.ini  requirements.txt  todo.bat  todo.ps1  todos.json  todos.json.bak  verify_env.py
projects/project-1/.nebula/tools/: log_setup_errors.mjs
projects/project-1/docs/: usage.md
projects/project-1/src/todo/: __init__.py  cli.py  storage.py  todo.py
projects/project-1/src/todo_list_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
projects/project-1/tests/: __init__.py  test_cli.py  test_integration.py  test_smoke.py  test_storage.py  test_todo.py
projects/project-2/: .coverage  .gitignore  CONSTELLATION_0_SETUP.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  STAR_GATE_0_SETUP.md  STAR_SYSTEM_0.1_ENVIRONMENT.md  STAR_SYSTEM_0.3_API_SETUP.md  pyproject.toml  pytest.ini  requirements.txt  test_api_connection.py  verify_env.py  weather.bat  weather.ps1
projects/project-2/src/weather/: __init__.py  api.py  cli.py  config.py  display.py
projects/project-2/src/weather_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/project-2/tests/: test_smoke.py
projects/project-3/: .coverage  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  fileorg.bat  fileorg.ps1  pyproject.toml  requirements.txt
projects/project-3/src/file_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
projects/project-3/src/fileorg/: __init__.py  cli.py  scanner.py
projects/project-3/tests/: test_smoke.py
scripts/: start.bat  start.sh  stop.bat  stop.sh
templates/: nebula-init-python.py
updates/: CONTEXT_OPTIMIZATION.md  NOVEMBER_IMPLEMENTATION_SUMMARY.md  NOVEMBER_UPDATES.md  README.md  SEPARATION_OF_CONCERNS.md
(+27 files in other folders)
